welcome.lessons.welcome.bat.bool2.In1To10.scala.error
in1To10:19: error: not found: value a
		om(a);
                   ^in1To10:21: error: not found: value a
		ins(a);
                    ^